added endpoints for pan/tilt cal and 'look_at'
